--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Netology homework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "npm i -D && nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/carbongo/js-ndse-library/issues"
   },
-  "homepage": "https://github.com/carbongo/js-ndse-library#readme"
+  "homepage": "https://github.com/carbongo/js-ndse-library#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-form-data": "^2.0.14",
+    "node-unique-id-generator": "^0.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
